try fixed alignments responsive ang images icon for Skills

--- a/src/assets/hero.css
+++ b/src/assets/hero.css
@@ -21,8 +21,8 @@
 }
 
 .buttons {
-    padding: 0 0 0 3rem;
     display: flex;
+    flex-wrap: wrap;
     gap: 2rem;
     margin-top: 2rem;
 }
@@ -102,17 +102,22 @@
         padding: 2rem 1rem 1rem;
     }
     
-    .buttons {
+    .me .buttons {
         padding: 0;
         gap: 1rem;
         justify-content: center;
         width: 100%;
+        flex-direction: column;
+        align-items: center;
+        
     }
     
     .me button {
-        margin: 25px 0 0 0;
+        margin: 10px auto;
         font-size: 0.8rem;
         padding: 0.5rem 1rem;
+        width: 80%;
+        max-width: 200px;
     }
     
     .text-content h1 {
@@ -136,12 +141,13 @@
     }
     
     .me img {
-        display: inline-block;
+        display: block;
         position: relative;
-        right: -5rem;
+        right: auto;
         top: 10px;
         width: 150px;
         height: 150px;
+        margin: 0 auto;
         }
     
     .typing-text {
@@ -151,12 +157,12 @@
 @media (max-width: 1024px ) {
     .me {
         padding: 2rem 1rem 1rem 2rem;
+
     }
     .me img {
-        display: inline-block;
+        display: block;
         position: static;
-        margin: 0 0 0 5rem;
-        top: 10px;
+        margin: 0 auto 20px;
         width: 200px;
         height: 200px;
     }
